# conformal-rv-calibration

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: preregistration.md
scripts/: run_grid.py  warm_cache.py
src/conformal_rv/: __init__.py  data.py  features.py  realised_vol.py  splits.py
src/conformal_rv/analysis/: __init__.py  figures.py  results.py
src/conformal_rv/conformal/: __init__.py  _online.py  aci.py  agaci.py  conformal_pid.py  cqr.py  dtaci.py  spci.py
src/conformal_rv/experiment/: __init__.py  engine.py  sweep.py
src/conformal_rv/metrics/: __init__.py  backtests.py  coverage.py  multiplicity.py  scoring.py  sharpness.py
src/conformal_rv/models/: __init__.py  baseline_ar.py  deep_comparator.py  har.py  har_quantile.py  tft.py
tests/: conftest.py  test_data.py  test_features.py  test_integration.py  test_realised_vol.py  test_splits.py
tests/analysis/: test_results.py
tests/conformal/: test_aci.py  test_agaci.py  test_conformal_pid.py  test_cqr.py  test_dtaci.py  test_online.py  test_spci.py
tests/experiment/: test_engine.py  test_sweep.py
tests/metrics/: test_backtests.py  test_coverage.py  test_multiplicity.py  test_scoring.py  test_sharpness.py
tests/models/: test_baseline_ar.py  test_deep_comparator.py  test_har.py  test_har_quantile.py  test_tft.py
